# gst-rc

./: .gitignore  AUTHORS  README.md  configure.ac
nbproject/: configurations.xml  project.xml
src/: Makefile.am  gnu_deleter.h  jsonrpc.cpp  jsonrpc.h  main.c  main.cpp  nocopy.h  pipeline.cpp  pipeline.h
